20020423
 - (markus) OpenBSD CVS Sync
   - markus@cvs.openbsd.org 2002/04/23 12:58:26
     [radix.c]
     send complete ticket; semerad@ss1000.ms.mff.cuni.cz
 - (djm) Trim ChangeLog to include only post-3.1 changes
 - (djm) Update RPM spec file versions
 - (djm) Redhat spec enables KrbV by default
 - (djm) Applied OpenSC smartcard updates from Markus & 
   Antti Tapaninen <aet@cc.hut.fi>
 - (djm) Define BROKEN_REALPATH for AIX, patch from 
   Antti Tapaninen <aet@cc.hut.fi>
 - (djm) Bug #214: Fix utmp for Irix (don't strip "tty"). Patch from 
   Kevin Taylor <no@nowhere.org> (??) via Philipp Grau
   <phgrau@zedat.fu-berlin.de>
 - (djm) Bug #213: Simplify CMSG_ALIGN macros to avoid symbol clashes. 
   Reported by Doug Manton <dmanton@emea.att.com>
 - (djm) Bug #222: Fix tests for getaddrinfo on OSF/1. Spotted by
   Robert Urban <urban@spielwiese.de>
 - (djm) Bug #206 - blibpath isn't always needed for AIX ld, avoid 
   sizeof(long long int) == 4 breakage. Patch from Matthew Clarke
   <Matthew_Clarke@mindlink.bc.ca>
 - (djm) Make privsep work with PAM (still experimental)
 - (djm) OpenBSD CVS Sync
   - deraadt@cvs.openbsd.org 2002/04/20 09:02:03
     [servconf.c]
     No, afs requires explicit enabling
   - markus@cvs.openbsd.org 2002/04/20 09:14:58
     [bufaux.c bufaux.h]
     add buffer_{get,put}_short
   - markus@cvs.openbsd.org 2002/04/20 09:17:19
     [radix.c]
     rewrite using the buffer_* API, fixes overflow; ok deraadt@
   - stevesk@cvs.openbsd.org 2002/04/21 16:19:27
     [sshd.8 sshd_config]
     document default AFSTokenPassing no; ok deraadt@
   - stevesk@cvs.openbsd.org 2002/04/21 16:25:06
     [sshconnect1.c]
     spelling in error message; ok markus@
   - markus@cvs.openbsd.org 2002/04/22 06:15:47
     [radix.c]
     fix check for overflow
   - markus@cvs.openbsd.org 2002/04/22 16:16:53
     [servconf.c sshd.8 sshd_config]
     do not auto-enable KerberosAuthentication; ok djm@, provos@, deraadt@
   - markus@cvs.openbsd.org 2002/04/22 21:04:52